--- a/css/style.css
+++ b/css/style.css
@@ -649,3 +649,87 @@ address {
 .footer-text {
   max-width: 264px;
 }
+
+.modal {
+  padding: 24px;
+}
+p.madal-title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--primari-color);
+  padding-top: 48px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding-left: 38px;
+  outline: transparent;
+  background: transparent;
+}
+.input-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: #8e8f99;
+}
+.icon-absolut {
+  position: relative;
+}
+.svg-input-icon {
+  fill: var(--primari-color);
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.modal-filed {
+  margin-bottom: 8px;
+}
+.modal-filed :nth-child() {
+  margin-bottom: 16px;
+}
+
+.modal-input:focus-within {
+  border: 1px solid var(--another-color);
+}
+.modal-input:focus-within + .svg-input-icon {
+  fill: var(--another-color);
+}
+.more-text {
+  width: 100%;
+  height: 120px;
+  padding-top: 8px;
+  padding-left: 16px;
+  resize: none;
+  outline: transparent;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  margin-bottom: 16px;
+  background: transparent;
+}
+.more-text::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+.modal-check {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.privacy-polisi {
+  text-decoration-line: underline;
+  line-height: 1.33;
+  color: var(--another-color);
+}
