--- a/css/style.css
+++ b/css/style.css
@@ -705,6 +705,9 @@ p.madal-title {
 .modal-input:focus-within + .svg-input-icon {
   fill: var(--another-color);
 }
+.modal-com-agree {
+  margin-bottom: 16px;
+}
 .more-text {
   width: 100%;
   height: 120px;
@@ -714,7 +717,6 @@ p.madal-title {
   outline: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  margin-bottom: 16px;
   background: transparent;
 }
 .more-text::placeholder {
