--- a/css/style.css
+++ b/css/style.css
@@ -749,7 +749,7 @@ p.madal-title {
   color: #ffffff;
   min-width: 169px;
   height: 56px;
-  background: var(--another-color);
+  background-color: var(--another-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
@@ -757,4 +757,7 @@ p.madal-title {
   display: block;
   margin: 0 auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.madal-sent-btn:is(:hover, :focus) {
+  background-color: #404bbf;
 }
