--- a/css/style.css
+++ b/css/style.css
@@ -705,30 +705,49 @@ p.madal-title {
 .modal-input:focus-within + .svg-input-icon {
   fill: var(--another-color);
 }
-.modal-com-agree {
-  margin-bottom: 16px;
-}
 .more-text {
   width: 100%;
   height: 120px;
-  padding-top: 8px;
-  padding-left: 16px;
+  padding: 8px 16px;
   resize: none;
   outline: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.more-text:focus-within {
-  border: 1px solid var(--another-color);
-}
-.more-text::placeholder {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
 }
+.more-text:focus-within {
+  border: 1px solid var(--another-color);
+}
+.modal-com-agree {
+  margin-bottom: 16px;
+}
+/* .more-text::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+} */
+
+.check-icon {
+  /* fill: #e90738; */
+}
+.modal-check span {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  margin-right: 8px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
 .modal-check {
   font-weight: 400;
   font-size: 12px;
@@ -736,11 +755,19 @@ p.madal-title {
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
+.modal-checkbox:checked + .modal-check span {
+  background-color: #404bbf;
+  fill: #f4f4fd;
+}
 .privacy-polisi {
   text-decoration-line: underline;
   line-height: 1.33;
   color: var(--another-color);
 }
+.modal-com-checkbox {
+  margin-bottom: 24px;
+}
+
 .madal-sent-btn {
   font-weight: 500;
   font-size: 16px;
