--- a/css/style.css
+++ b/css/style.css
@@ -695,9 +695,9 @@ p.madal-title {
 .modal-filed {
   margin-bottom: 8px;
 }
-.modal-filed :nth-child() {
+/* .modal-filed :nth-child() {
   margin-bottom: 16px;
-}
+} */
 
 .modal-input:focus-within {
   border: 1px solid var(--another-color);
@@ -746,6 +746,9 @@ p.madal-title {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check {
@@ -758,6 +761,7 @@ p.madal-title {
 .modal-checkbox:checked + .modal-check span {
   background-color: #404bbf;
   fill: #f4f4fd;
+  border: none;
 }
 .privacy-polisi {
   text-decoration-line: underline;
