--- a/css/style.css
+++ b/css/style.css
@@ -794,6 +794,9 @@ p.madal-title {
   background-color: #404bbf;
 }
 /* -----------------portfolio2 */
+.footer-subscribe {
+  margin-left: 80px;
+}
 .footer-subscribe-text {
   font-weight: 500;
   font-size: 16px;
