--- a/css/style.css
+++ b/css/style.css
@@ -810,12 +810,17 @@ p.madal-title {
   gap: 24px;
 }
 .subscribe-iput {
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   min-width: 264px;
   height: 40px;
   background-color: transparent;
   border: 1px solid #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+  padding-left: 16px;
+  color: #ffffff;
 }
 .subscribe-iput::placeholder {
   color: #ffffff;
@@ -836,4 +841,9 @@ p.madal-title {
   cursor: pointer;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.svg-footer-btn {
+  margin-left: 16px;
+  fill: #ffffff;
 }
